Project

General

Profile

Actions

Bug #11790

closed

[PATCH] ANSI alias rules fix

Bug #11790: [PATCH] ANSI alias rules fix

Added by Zarko (Zarko Todorovski) almost 11 years ago. Updated almost 11 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:71953]

Description

line 70 in file regparse.h:

#define SET_NTYPE(node, ntype)   (node)->u.base.type = (ntype)

needs to be changed to conform with ANSI alias rules

Line 70 as it is can lead to errors in compiling in regparse.c

line 1143: node = (Node* )FreeNodeList;
line 1144: FreeNodeList = FreeNodeList->next;
line 1581: (node)->u.base.type = (0);

where during compiling line 1581 can be moved ahead of line 1144 since under ANSI aliasing rules, the compiler determines that the statement of "(node)->u.base.type = (0);" does not affect the value of FreeNodeList.

Proposed change in patch is in file regparse.h:

-#define SET_NTYPE(node, ntype)   (node)->u.base.type = (ntype)
+#define SET_NTYPE(node, ntype)  {int value = ntype; memcpy(&((node)->u.base.type), &value, sizeof((node)->u.base.type));}

Files

alias_ansi_rule.patch (717 Bytes) alias_ansi_rule.patch Zarko (Zarko Todorovski), 12/08/2015 04:27 PM

Related issues 1 (0 open — 1 closed)

Related to Ruby - Misc #11795: [PATCH] get rid of breaking strict alias for XL compilerClosedActions
Actions

Also available in: PDF Atom