regparse.h: ANSI alias rule fix

* regparse.h (SET_NTYPE): get rid of breaking strict aliasing.
  patch by Zarko Todorovski in [ruby-core:71953].  [Bug #11790]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@52999 b2dd03c8-39d4-4d8f-98ff-823fe69b080e